--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-svg": "^15.12.1",
     "react-native-web": "^0.20.0",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0"
